--- a/notedeck/css/sass/app.scss
+++ b/notedeck/css/sass/app.scss
@@ -7,9 +7,12 @@
 	color: #ffffff;
 	background: rgb(228,141,0);
 	border: none;
-	padding: 30px;
-	font-size: 50px;
+	padding: 0px;
+	font-size: 2em;
 	border-radius: 100px;
+	line-height: 70px;
+	height: 70px;
+	width: 70px;
 	position: fixed;
 	bottom: 50px;
 	right: 50px;
@@ -29,7 +32,7 @@
 	left: 0;
 	right: 0;
 	padding: 25px;
-	background: rgb(255,255,255);
+	background: rgba(255,255,255, .9);
 	display: none;
 
 	.container {
@@ -46,8 +49,10 @@
 	top: 30px;
 	right: 30px;
 	color: #ffffff;
-	padding: 10px;
-	font-size: 30px;
+	font-size: 2em;
+	height: 50px;
+	width: 50px;
+	line-height: 50px;
 	border-radius: 50px;
 	border: none;
 	background: #000000;
