--- a/notedeck/css/sass/partials/_text.scss
+++ b/notedeck/css/sass/partials/_text.scss
@@ -3,7 +3,8 @@
 	background-size: cover !important;
 
 	.container {
-		padding: 100px 0;
+		padding-top: 2em;
+		padding-bottom: 2em;
 	}
 }
 
@@ -14,8 +15,8 @@
 	border: none;
 	border-radius: 30px;
 	color: white;
-	font-size: 24px;
 }
+
 h1 {
 	font-size: 60px;
 }
@@ -36,31 +37,4 @@ h6 {
 }
 p {
 	font-size: 25px;
-}
-
-@media screen and (max-width: 900px){
-	h1 {
-		font-size: 80px;
-	}
-	h1 {
-		font-size: 75px;
-	}
-	h2 {
-		font-size: 70px;
-	}
-	h3 {
-		font-size: 65px;
-	}
-	h4 {
-		font-size: 60px;
-	}
-	h5 {
-		font-size: 55px;
-	}
-	h6 {
-		font-size: 50px;
-	}
-	p {
-		font-size: 45px;
-	}
 }
