--- a/notedeck/css/sass/app.scss
+++ b/notedeck/css/sass/app.scss
@@ -107,8 +107,8 @@ body {
 }
 @media screen and (max-width: 900px){
 	.nd-notes-button{
-		font-size: 60px;	
-		padding: 40px;
+		right: 10px;
+		bottom: 10px;
 	}
 }
 // Import partials
