Fixed Text area scroll and updated gitignore to include codekit-cache folder

--- a/css/sass/app.scss
+++ b/css/sass/app.scss
@@ -56,7 +56,7 @@
 	line-height: 50px;
 	border-radius: 50px;
 	border: none;
-	background: #000000;
+	background: none;
 }
 .nd-notes-email {
 	border:1px solid rgba(0,0,0,.2);
