--- a/css/sass/partials/_text.scss
+++ b/css/sass/partials/_text.scss
@@ -16,26 +16,27 @@
 	border-radius: 30px;
 	color: white;
 }
-
-h1 {
-	font-size: 60px;
-}
-h2 {
-	font-size: 50px;
-}
-h3 {
-	font-size: 45px;
-}
-h4 {
-	font-size: 40px;
-}
-h5 {
-	font-size: 35px;
-}
-h6 {
-	font-size: 30px;
-}
-p {
-	font-size: 25px;
-	line-height: 1.25em;
+#note-deck-95w {
+	h1 {
+		font-size: 60px;
+	}
+	h2 {
+		font-size: 50px;
+	}
+	h3 {
+		font-size: 45px;
+	}
+	h4 {
+		font-size: 40px;
+	}
+	h5 {
+		font-size: 35px;
+	}
+	h6 {
+		font-size: 30px;
+	}
+	p {
+		font-size: 25px;
+		line-height: 1.25em;
+	}
 }
