Fixed some styling. Extracted functions. Cleaned up code and comments. Updated ACF build.

--- a/css/sass/admin.scss
+++ b/css/sass/admin.scss
@@ -1,3 +1,8 @@
-.update-nag.nd-error {
-	border-left: 4px solid red !important;
+.update-nag {
+	&.nd-error {
+		border-left: 4px solid red !important;
+	}
+	&.nd-success {
+		border-left: 4px solid #7ad03a !important;
+	}
 }
