--- a/css/admin.css
+++ b/css/admin.css
@@ -1,2 +1,4 @@
 .update-nag.nd-error {
   border-left: 4px solid red !important; }
+.update-nag.nd-success {
+  border-left: 4px solid #7ad03a !important; }
