--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+button {
+  outline: none; }
+
+.container {
+  max-width: 100% !important; }
+
 .update-nag.nd-error {
   border-left: 4px solid red !important; }
 
@@ -36,20 +42,22 @@
   display: none;
   overflow-y: scroll; }
   .nd-notes-wrapper .container {
-    position: relative; }
+    position: relative;
+    max-width: 100% !important; }
   .nd-notes-wrapper .input-group {
     padding: 16px;
     background: #efefef; }
 
 .nd-notes-close {
   position: absolute;
-  top: 30px;
-  right: 30px;
+  padding: 5px;
+  top: 0;
+  right: 10px;
   color: #ffffff;
   font-size: 2em;
-  height: 50px;
-  width: 50px;
-  line-height: 50px;
+  height: 60px;
+  width: 60px;
+  line-height: 0;
   border-radius: 50px;
   border: none;
   background: none; }
@@ -62,8 +70,12 @@
     box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.2); }
 
 .nd-notes-content {
-  margin-top: 90px;
-  height: 100%; }
+  height: 100% !important;
+  font-size: 18px;
+  border-radius: 0;
+  border: none !important;
+  outline: none;
+  padding: 16px 32px; }
 
 .nd-notes-send {
   background: #6397bf;
@@ -76,6 +88,10 @@
     background: rgba(99, 151, 191, 0.7); }
   .nd-notes-send[disabled] {
     color: #000000; }
+
+.nd-notes-form {
+  height: 70vh;
+  margin-top: 60px; }
 
 .nd-slide-wrap {
   text-align: center; }
