--- a/css/sass/app.scss
+++ b/css/sass/app.scss
@@ -1,4 +1,10 @@
 // Base Styling
+button {
+	outline: none;
+}
+.container {
+	max-width: 100% !important;
+}
 .update-nag.nd-error {
 	border-left: 4px solid red !important;
 }
@@ -41,6 +47,7 @@
 
 	.container {
 		position: relative;
+		max-width: 100% !important;
 	}
 
 	.input-group {
@@ -50,13 +57,14 @@
 }
 .nd-notes-close {
 	position: absolute;
-	top: 30px;
-	right: 30px;
+	padding: 5px;
+	top: 0;
+	right: 10px;
 	color: #ffffff;
 	font-size: 2em;
-	height: 50px;
-	width: 50px;
-	line-height: 50px;
+	height: 60px;
+	width: 60px;
+	line-height: 0;
 	border-radius: 50px;
 	border: none;
 	background: none;
@@ -70,8 +78,12 @@
 	}
 }
 .nd-notes-content {
-	margin-top: 90px;
-	height: 100%;
+	height: 100% !important;
+	font-size: 18px;
+	border-radius: 0;
+	border: none !important;
+	outline: none;
+	padding: 16px 32px;
 }
 .nd-notes-send {
 	background: rgb(99,151,191);
@@ -87,6 +99,10 @@
 	&[disabled] {
 		color: #000000;
 	}
+}
+.nd-notes-form {
+	height: 70vh;
+	margin-top: 60px;
 }
 .nd-slide-wrap {
 	text-align: center;
